# simular

./: .gitignore  .readthedocs.yaml  Cargo.toml  Makefile  README.md  bench.py  pyproject.toml
.github/workflows/: build-linux-test.yml  build-linux.yml  build-mac.yml  build-publish.yml  build-release.yml  mdbook.yml  test_pypi.yml
bench/: simple.py
docs/: book.toml  conf.py  contract.rst  evm.rst  getstarted.rst  index.rst  toc.rst  utils.rst
docs/src/: SUMMARY.md  getstarted.md  overview.md
docs/src/reference/: contract.md  pyabi.md  pyevm.md  utils.md
docsp/: api.rst  conf.py  getstarted.rst  index.rst
simular/: __init__.py  contract.py  simular.pyi  utils.py
src/: abi.rs  baseevm.rs  lib.rs  pyabi.rs  pyevm.rs  snapshot.rs  types.rs
src/core/: abi.rs  baseevm.rs  errors.rs  evm.rs  fork.rs  fork_backend.rs  in_memory_db.rs  mod.rs  snapshot.rs  storage.rs
src/py/: mod.rs  pyabi.rs  pyevm.rs
tests/: conftest.py  test_abi.py  test_baseevm.py  test_contract.py  test_datatypes.py  test_fork.py  test_pyabi.py  test_pyevm.py  test_snapshot.py
tests/fixtures/: BlockMeta.json  KitchenSink.json  SignedInts.json  abi1.json  counter.json  erc20.abi  usdc_addresses.json  usdc_cache.json
tests/fixtures/contracts/: KitchenSink.sol  MockERC20.sol
