[project]
name = "simular-evm"
requires-python = ">=3.11"

classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.poetry]
name = "simular-evm"
version = "0.2.0"
authors = ["Dave Bryson"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/simular-fi/simular"
repository = "https://github.com/simular-fi/simular"
documentation = "https://github.com/simular-fi/simular/docs/"
keywords = ["agent-based modeling", "ethereum", "solidity", "simulation"]
description = "smart-contract api and embedded ethereum virtual machine"

[tool.poetry.dependencies]
python = "^3.11"
eth-abi = "^4.1.0"
eth-utils = "^2.2.0"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
pytest = "^7.4.0"
maturin = "^1.1.0"
tqdm = "^4.66.2"

[tool.maturin]
features = ["pyo3/extension-module"]
sdist-include = ["LICENSE", "README.md"]

[build-system]
requires = ["maturin>=1.1,<2.0"]
build-backend = "maturin"
