[build-system]
requires = ["maturin>=1.1,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
sdist-include = ["LICENSE", "README.md"]


[project]
name = "simular-evm"
version = "0.2.2"
requires-python = ">=3.11"
authors = [
    { name = "Dave Bryson", email = "davebryson@users.noreply.github.com" },
]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/simular-fi/simular"
repository = "https://github.com/simular-fi/simular"
documentation = "https://github.com/simular-fi/simular/docs/"
keywords = ["agent-based modeling", "ethereum", "solidity", "simulation"]
description = "smart-contract api and embedded ethereum virtual machine"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

dependencies = ["eth-abi>=4.1.0", "eth-utils>=2.2.0"]

[tool.hatch.envs.dev]
dependencies = [
    "pytest>=7.4.0",
    "black>=23.7.0",
    "maturin>=1.1.0",
    "sphinx>=7.2.6",
    "sphinx_rtd_theme>=2.0.0",
]

[tool.hatch.envs.dev.scripts]
docs = "sphinx-build -M html docs docs/build"

[project.urls]
Source = "https://github.com/simular-fi/simular"
Documentation = "https://simular-fi.github.io/simular"
Issues = "https://github.com/simular-fi/simular/issues"
